--- a/public/style.css
+++ b/public/style.css
@@ -17,3 +17,15 @@ div {
   justify-content: center;
   align-items: center;
 }
+
+#loading {
+  height: 30px;
+  width: 30px;
+  display: block;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  position: absolute;
+}
